# xlang

./: .coveragerc  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  grammar.lark  hello.xl  main.py  notebook.ipynb  parse.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test.xl  transformer.py  xl_ast.py
compile_tests/: basic.xl
examples/: basics.xl  fib.xl  hello_world.xl  lexer.xl  vec.xl
parse_tests/: basic.xl  function_call.xl  struct_access.xl
stdlib/: io.c  io.ll
tests/: array_access.xl  basic.xl  conftest.py  int_to_str.xl  test_arrays.py  test_basics.py  test_conditionals.py  test_functions.py  test_interpreter.py  test_parsing.py  test_structs.py  test_validation_pass.py
tests/lit/: arrays.xl  basics.xl  chars.xl  conditionals.xl  const.xl  enums.xl  function_parameters.xl  functions.xl  invalid.xl  lit.cfg.py  methods.xl  strings.xl  struct_init.xl  structs.xl  unary_minus.xl
tests/unit/: test_arrays.py  test_conditionals.py  test_enums.py  test_functions.py  test_parsing.py  test_structs.py  test_validation_pass.py  test_variable_access.py
xlang/: exceptions.py  grammar.lark  interpreter.py  interpreter_datatypes.py  parser.py  transformer.py  utils.py  validation_pass.py  xl_ast.py  xl_builtins.py  xl_types.py
